# django-next-ninja-api

./: LICENSE  README.md  pyproject.toml
account/: admin.py  api.py  models.py  schema.py
account/migrations/: 0001_initial.py
core/: api.py  settings.py  urls.py
utils/: schema.py
